[tool.poetry]
name = "adam-modbus"
version = "0.0.1"
description = "asyncio python interface for Advantech ADAM modules"
authors = ["Josh Gruenstein <josh@tutorintelligence.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.961"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
style = "poetry_scripts:style"

[tool.semantic_release]
version_variable = [
    "adam_modbus/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = false
build_command = "pip install poetry && poetry build"