[tool.poetry]
name = "adam-modbus"
version = "0.1.2"
description = "asyncio python interface for Advantech ADAM modules"
authors = ["Josh Gruenstein <josh@tutorintelligence.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.961"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
style = "poetry_scripts:style"

[tool.semantic_release]
version_variables = ["adam_modbus/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "pip install poetry && poetry build"